--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -4,14 +4,14 @@ h2.font-bold.text-lg.mb-2
   div.rounded.border.border-gray-400.w-80.overflow-hidden
     ul.w-full.max-h-60.overflow-y-auto
       - talk_themes.each do |talk_theme|
-        li.border-b.last:border-b-0.border-gray-400.h-10.w-full.group
+        li.border-b.last:border-b-0.border-gray-400.w-full.group.pl-4.pr-2.py-2
           = turbo_frame_tag talk_theme do
-            div.flex.items-center.px-4.h-full
+            div.flex.items-center.h-full
               p.hidden
                 = talk_theme.id
-              div.flex-1
+              div.flex-1.line-clamp-1
                 = link_to talk_theme.theme, edit_roulette_talk_theme_path(@roulette, talk_theme), class:'w-full block'
-              div.ml-auto.opacity-0.group-hover:opacity-80
+              div.ml-2.opacity-0.group-hover:opacity-80
                 = link_to image_tag('delete-icon.png', size: '10x10'),
                   roulette_talk_theme_path(@roulette, talk_theme),
                   data: { turbo_method: :delete, turbo_frame: '_top' },
