利用規約とプライバシーポリシーのモーダルを追加

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -50,7 +50,7 @@ div.mt-6 data-controller="rotate"
             = image_tag 'help-icon.png', size: '16x16'
             p.leading-4.tracking-wider
               | 使い方
-      = render partial: 'roulettes/modal'
+      = render partial: 'roulettes/help_modal'
       div.mt-12.h-80
         = render partial: 'talk_themes/index', locals: { talk_themes: @talk_themes }
       div.mt-10.h-80
