利用規約の文章を追加した

--- a/app/views/shared/_privacy_policy_modal.html.slim
+++ b/app/views/shared/_privacy_policy_modal.html.slim
@@ -19,5 +19,9 @@ dialog#privacy_policy_modal.modal
           = link_to 'Googleプライバシーポリシー', 'https://policies.google.com/technologies/ads'
           | をご確認ください。
         p
+          | また、Google による情報収集を無効化したい場合は、Google社が提供する
+          = link_to 'Google アナリティクス オプトアウト アドオン', 'https://tools.google.com/dlpage/gaoptout'
+          | からオプトアウトの設定が可能です。
+        p
           | ※Cookieとは、利用者がウェブサイトに訪問した際、ブラウザーを通して利用者のコンピューターに一時的にデータを記録する仕組みのことです。
             Cookieには、利用者の端末に関する情報やサイトへの訪問回数といった情報が記録され、サイトへの訪問者としての利用者の識別として利用されます。
