--- a/app/views/shared/_term_of_service_modal.html.slim
+++ b/app/views/shared/_term_of_service_modal.html.slim
@@ -6,13 +6,13 @@ dialog#term_of_service_modal.modal
       form method="dialog"
         = button_tag class: 'btn btn-sm btn-circle btn-ghost absolute right-8 top-4'
           = image_tag 'delete-icon.png', size: '15x15'
-      div
-        h2
+      div.leading-7.text-base
+        h2.font-bold.text-xl
           | 利用規約
-        p
+        p.mt-2
           | この利用規約（以下、「本規約」といいます。）は、このウェブサイト上で提供するサービス（以下、「本サービス」といいます。）の
             利用条件を定めるものです。登録ユーザーの皆さま（以下、「ユーザー」といいます。）には、本規約に従って、本サービスをご利用いただきます。
-        h3
+        h3.font-bold.text-lg.my-2
           | 第1条（適用）
         ol
           li
@@ -22,12 +22,11 @@ dialog#term_of_service_modal.modal
               これら個別規定はその名称のいかんに関わらず、本規約の一部を構成するものとします。
           li
             | 本規約の規定が前条の個別規定の規定と矛盾する場合には、個別規定において特段の定めなき限り、個別規定の規定が優先されるものとします。
-
-        h3
+        h3.font-bold.text-lg.my-2
           | 第2条（禁止事項）
         p
           | ユーザーは、本サービスの利用にあたり、以下の行為をしてはなりません。
-        ol
+        ol.list-decimal.pl-4
           li
             | 法令または公序良俗に違反する行為
           li
@@ -54,12 +53,12 @@ dialog#term_of_service_modal.modal
             | 本サービスに関連して、反社会的勢力に対して直接または間接に利益を供与する行為
           li
             | その他、本サービスが不適切と判断する行為
-        h3
+        h3.font-bold.text-lg.my-2
           | 第3条（本サービスの提供の停止等）
-        ol
+        ol.list-decimal.pl-4
           li
             | 本サービスは、以下のいずれかの事由があると判断した場合、ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。
-            ol
+            ol.list-decimal.pl-4
               li
                 | 本サービスにかかるコンピュータシステムの保守点検または更新を行う場合
               li
@@ -70,37 +69,37 @@ dialog#term_of_service_modal.modal
                 | その他、本サービスが本サービスの提供が困難と判断した場合
           li
             | 本サービスは、本サービスの提供の停止または中断により、ユーザーまたは第三者が被ったいかなる不利益または損害についても、一切の責任を負わないものとします。
-        h3
+        h3.font-bold.text-lg.my-2
           | 第4条（保証の否認および免責事項）
-        ol
+        ol.list-decimal.pl-4
           li
             | 本サービスは、本サービスに事実上または法律上の瑕疵（安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性、セキュリティなどに関する欠陥、エラーやバグ、権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。
           li
             | 本サービスは、本サービスに起因してユーザーに生じたあらゆる損害について、本サービスの故意又は重過失による場合を除き、一切の責任を負いません。
           li
             | 本サービスは、本サービスに関して、ユーザーと他のユーザーまたは第三者との間において生じた取引、連絡または紛争等について一切責任を負いません。
-        h3
+        h3.font-bold.text-lg.my-2
           | 第5条（サービス内容の変更等）
         p
           | 本サービスは、ユーザーへの事前の告知をもって、本サービスの内容を変更、追加または廃止することがあり、ユーザーはこれを承諾するものとします。
-        h3
+        h3.font-bold.text-lg.my-2
           | 第6条（利用規約の変更）
-        ol
+        ol.list-decimal.pl-4
           li
             | 本サービスは、本サービスが必要と判断した場合には、ユーザーへ通知することなく、本規約を変更することができるものとします。
           li
             | ユーザーが本規約の変更後に、本サービスの利用を開始した場合には、変更後の規約に同意したものとみなします。
-        h3
+        h3.font-bold.text-lg.my-2
           | 第7条（個人情報の取扱い）
         p
           | 本サービスは、本サービスの利用によって取得する個人情報については、「プライバシーポリシー」に従い適切に取り扱うものとします。
-        h3
+        h3.font-bold.text-lg.my-2
           | 第8条（権利義務の譲渡の禁止）
         p
           | ユーザーは、本サービスの書面による事前の承諾なく、利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し、または担保に供することはできません。
-        h3
+        h3.font-bold.text-lg.my-2
           | 第9条（準拠法・裁判管轄）
-        ol
+        ol.list-decimal.pl-4
           li
             | 本規約の解釈にあたっては、日本法を準拠法とします。
           li
