--- a/app/views/speakers/_index.html.slim
+++ b/app/views/speakers/_index.html.slim
@@ -18,4 +18,4 @@ h2.font-bold.text-lg.mb-2
                   class: "btn btn-xs btn-circle btn-ghost"
   = turbo_frame_tag 'new_speaker' do
     div.mt-3.px-1
-      = link_to "＋ トークテーマを追加する", new_roulette_speaker_path(@roulette), class: 'text-neutral'
+      = link_to "＋ 話す人を追加する", new_roulette_speaker_path(@roulette), class: 'text-neutral'
