使い方ボタンとURLコピーボタンのテスト追加
使い方ボタンとURLコピーボタンのテストを追加した。
また、トップページのテストに関しては別ファイルに書くように変更。

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,4 +16,5 @@ html
       = render partial: 'shared/header'
     main.w-fit.mx-auto
       = yield
-    = render partial: 'shared/footer'
+    - if current_page?(root_path)
+      = render partial: 'shared/footer'
