--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -20,13 +20,13 @@ div.mt-6 data-controller="rotate"
               div.roulette__theme data-rotate-target="talk" style="#{Roulette.conic_gradient_text(@talk_themes, TalkTheme::COLOR_SET)}"
                 ul.absolute.theme__labelContainer
                   - @talk_themes.each_with_index do |talk_theme, idx|
-                    li.absolute.theme__label data-roulette-target="talkTheme" data-rotate-target="talkTheme" style="#{Roulette.label_position_and_angle(talk_theme.theme, 170, @talk_themes.count, idx, 100, 10)}"
+                    li.absolute.theme__label data-roulette-target="talkTheme" data-rotate-target="talkTheme" style="#{Roulette.label_position_and_angle(talk_theme.theme, 170, @talk_themes.count, idx, 100)}"
                       div.w-24.whitespace-normal.ml-auto.line-clamp-2
                         = talk_theme.theme
               div.absolute.roulette__speaker data-rotate-target="speaker"style="#{Roulette.conic_gradient_text(@speakers, Speaker::COLOR_SET)}"
                 ul.absolute.speaker__labelContainer
                   - @speakers.each_with_index do |speaker, idx|
-                    li.absolute.speaker__label data-roulette-target="speakerName" data-rotate-target="speakerName" style="#{Roulette.label_position_and_angle(speaker.name, 70, @speakers.count, idx, 50, 10)}"
+                    li.absolute.speaker__label data-roulette-target="speakerName" data-rotate-target="speakerName" style="#{Roulette.label_position_and_angle(speaker.name, 70, @speakers.count, idx, 50)}"
                       div.w-20.whitespace-normal.ml-auto.line-clamp-2
                         = speaker.name
               div.absolute.theme__needle
