--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,3 +1,5 @@
 header
-  div.flex.w-screen.items-center.py-2.pl-10.shadow
-    = link_to image_tag('logo-header.png', size: '200x80'), root_path, class: 'text-primary font-bold text-2xl'
+  .flex.w-screen.items-center.py-2.pl-10.shadow
+    = link_to image_tag('logo-header.png', size: '200x80'),
+      root_path,
+      class: 'text-primary font-bold text-2xl'
