--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,13 +3,15 @@ html
   head
     title
       | RouletteTalk
-    meta name="viewport" content="width=device-width,initial-scale=1"
+    meta name='viewport' content='width=device-width,initial-scale=1'
     = csrf_meta_tags
     = csp_meta_tag
 
     = favicon_link_tag('favicon.ico')
-    = stylesheet_link_tag "application", "data-turbo-track": "reload"
-    = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
+    = stylesheet_link_tag 'application', "data-turbo-track": 'reload'
+    = javascript_include_tag 'application',
+      "data-turbo-track": 'reload',
+      defer: true
 
   body.relative.min-h-screen.w-screen
     - unless current_page?(root_path)
