--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,12 +1,19 @@
 footer.footer.absolute.bottom-0
-  div.flex.relative.w-screen.justify-center.items-center.p-3.bg-base-300.text-neutral
-    div.flex
-      = button_tag '利用規約', onclick: 'term_of_service_modal.showModal()', class: 'mr-3'
+  div[class='flex relative w-screen justify-center items-center\
+             p-3 bg-base-300 text-neutral']
+    .flex
+      = button_tag '利用規約',
+        onclick: 'term_of_service_modal.showModal()',
+        class: 'mr-3'
       = render partial: 'shared/term_of_service_modal'
-      = button_tag 'プライバシーポリシー', onclick: 'privacy_policy_modal.showModal()'
+      = button_tag 'プライバシーポリシー',
+        onclick: 'privacy_policy_modal.showModal()'
       = render partial: 'shared/privacy_policy_modal'
-    div.flex.h-6.ml-auto.absolute.right-10
-      div.flex.items-center.h-full.mr-3
+    .flex.h-6.ml-auto.absolute.right-10
+      .flex.items-center.h-full.mr-3
         p.text-base
           | © 2023 siso25
-      = link_to image_tag('github-mark.svg', class: 'h-auto w-full'), 'https://github.com/siso25/roulette-talk', class: 'w-6'
+      = link_to image_tag('github-mark.svg',
+        class: 'h-auto w-full'),
+        'https://github.com/siso25/roulette-talk',
+        class: 'w-6'
