--- a/app/views/shared/_term_of_service_modal.html.slim
+++ b/app/views/shared/_term_of_service_modal.html.slim
@@ -1,12 +1,13 @@
 dialog#term_of_service_modal.modal
   form.modal-backdrop method="dialog"
     button
-  div.modal-box.w-2/3.max-w-3xl.h-4/5.overflow-hidden.pr-3.pl-10.pt-10.pb-10
-    div.w-full.h-full.overflow-y-auto
+  .modal-box.w-2/3.max-w-3xl.h-4/5.overflow-hidden.pr-3.pl-10.pt-10.pb-10
+    .w-full.h-full.overflow-y-auto
       form method="dialog"
-        = button_tag class: 'btn btn-sm btn-circle btn-ghost absolute right-8 top-4'
+        = button_tag '',
+          class: 'btn btn-sm btn-circle btn-ghost absolute right-8 top-4'
           = image_tag 'delete-icon.png', size: '15x15'
-      div.leading-7.text-base
+      .leading-7.text-base
         h2.font-bold.text-xl
           | 利用規約
         p.mt-2
@@ -57,7 +58,8 @@ dialog#term_of_service_modal.modal
           | 第3条（本サービスの提供の停止等）
         ol.list-decimal.pl-4
           li
-            | 本サービスは、以下のいずれかの事由があると判断した場合、ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。
+            | 本サービスは、以下のいずれかの事由があると判断した場合、ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止
+              または中断することができるものとします。
             ol.list-decimal.pl-4
               li
                 | 本サービスにかかるコンピュータシステムの保守点検または更新を行う場合
@@ -68,20 +70,25 @@ dialog#term_of_service_modal.modal
               li
                 | その他、本サービスが本サービスの提供が困難と判断した場合
           li
-            | 本サービスは、本サービスの提供の停止または中断により、ユーザーまたは第三者が被ったいかなる不利益または損害についても、一切の責任を負わないものとします。
+            | 本サービスは、本サービスの提供の停止または中断により、ユーザーまたは第三者が被ったいかなる不利益または損害についても、
+              一切の責任を負わないものとします。
         h3.font-bold.text-lg.my-2
           | 第4条（保証の否認および免責事項）
         ol.list-decimal.pl-4
           li
-            | 本サービスは、本サービスに事実上または法律上の瑕疵（安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性、セキュリティなどに関する欠陥、エラーやバグ、権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。
+            | 本サービスは、本サービスに事実上または法律上の瑕疵（安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性、
+              セキュリティなどに関する欠陥、エラーやバグ、権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。
           li
-            | 本サービスは、本サービスに起因してユーザーに生じたあらゆる損害について、本サービスの故意又は重過失による場合を除き、一切の責任を負いません。
+            | 本サービスは、本サービスに起因してユーザーに生じたあらゆる損害について、本サービスの故意又は重過失による場合を除き、
+              一切の責任を負いません。
           li
-            | 本サービスは、本サービスに関して、ユーザーと他のユーザーまたは第三者との間において生じた取引、連絡または紛争等について一切責任を負いません。
+            | 本サービスは、本サービスに関して、ユーザーと他のユーザーまたは第三者との間において生じた取引、連絡または紛争等について
+              一切責任を負いません。
         h3.font-bold.text-lg.my-2
           | 第5条（サービス内容の変更等）
         p
-          | 本サービスは、ユーザーへの事前の告知をもって、本サービスの内容を変更、追加または廃止することがあり、ユーザーはこれを承諾するものとします。
+          | 本サービスは、ユーザーへの事前の告知をもって、本サービスの内容を変更、追加または廃止することがあり、
+            ユーザーはこれを承諾するものとします。
         h3.font-bold.text-lg.my-2
           | 第6条（利用規約の変更）
         ol.list-decimal.pl-4
@@ -96,7 +103,8 @@ dialog#term_of_service_modal.modal
         h3.font-bold.text-lg.my-2
           | 第8条（権利義務の譲渡の禁止）
         p
-          | ユーザーは、本サービスの書面による事前の承諾なく、利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し、または担保に供することはできません。
+          | ユーザーは、本サービスの書面による事前の承諾なく、利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し、
+            または担保に供することはできません。
         h3.font-bold.text-lg.my-2
           | 第9条（準拠法・裁判管轄）
         ol.list-decimal.pl-4
