--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -1,21 +1,25 @@
 h2.font-bold.text-lg.mb-2
   | トークテーマ
 = turbo_frame_tag 'talk_themes_list'
-  div.rounded.border.border-gray-400.w-80.overflow-hidden
+  .rounded.border.border-gray-400.w-80.overflow-hidden
     ul.w-full.max-h-60.overflow-y-auto
       - talk_themes.each do |talk_theme|
         li.border-b.last:border-b-0.border-gray-400.w-full.group.pl-4.pr-2.py-2
           = turbo_frame_tag talk_theme do
-            div.flex.items-center.h-full
+            .flex.items-center.h-full
               p.hidden
                 = talk_theme.id
-              div.flex-1.line-clamp-1
-                = link_to talk_theme.theme, edit_roulette_talk_theme_path(@roulette, talk_theme), class:'w-full block'
-              div.ml-2.opacity-0.group-hover:opacity-80
+              .flex-1.line-clamp-1
+                = link_to talk_theme.theme,
+                  edit_roulette_talk_theme_path(@roulette, talk_theme),
+                  class: 'w-full block'
+              .ml-2.opacity-0.group-hover:opacity-80
                 = link_to image_tag('delete-icon.png', size: '10x10'),
                   roulette_talk_theme_path(@roulette, talk_theme),
                   data: { turbo_method: :delete, turbo_frame: '_top' },
-                  class: "btn btn-xs btn-circle btn-ghost"
+                  class: 'btn btn-xs btn-circle btn-ghost'
   = turbo_frame_tag 'new_talk_theme' do
-    div.mt-3.px-1
-      = link_to "＋ トークテーマを追加する", new_roulette_talk_theme_path(@roulette), class: 'text-neutral'
+    .mt-3.px-1
+      = link_to '＋ トークテーマを追加する',
+        new_roulette_talk_theme_path(@roulette),
+        class: 'text-neutral'
