--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,6 +1,6 @@
 footer.footer.absolute.bottom-0
-  div[class='flex relative w-screen justify-center items-center\
-             p-3 bg-base-300 text-neutral']
+  div[class="flex relative w-screen justify-center items-center\
+             p-3 bg-base-300 text-neutral"]
     .flex
       = button_tag '利用規約',
         onclick: 'term_of_service_modal.showModal()',
