--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -31,9 +31,12 @@
                     li.absolute.theme__label[
                       data-roulette-target="talkTheme"
                       data-rotate-target="talkTheme"
-                      style="#{Roulette.label_position_and_angle(
-                        talk_theme.theme, 170, @talk_themes.count, idx, 100
-                      )}"]
+                      data-controller="roulette-label"
+                      data-roulette-label-index-value="#{idx}"
+                      data-roulette-label-count-value="#{@talk_themes.count}"
+                      data-roulette-label-radius-value="170"
+                      data-roulette-label-top-plus-value="10"
+                      data-roulette-label-left-plus-value="100"]
                       .w-24.whitespace-normal.ml-auto.line-clamp-2
                         = talk_theme.theme
               .absolute.roulette__speaker[
@@ -46,9 +49,12 @@
                     li.absolute.speaker__label[
                       data-roulette-target="speakerName"
                       data-rotate-target="speakerName"
-                      style="#{Roulette.label_position_and_angle(
-                        speaker.name, 70, @speakers.count, idx, 50
-                      )}"]
+                      data-controller="roulette-label"
+                      data-roulette-label-index-value="#{idx}"
+                      data-roulette-label-count-value="#{@speakers.count}"
+                      data-roulette-label-radius-value="70"
+                      data-roulette-label-top-plus-value="10"
+                      data-roulette-label-left-plus-value="50"]
                       .w-20.whitespace-normal.ml-auto.line-clamp-2
                         = speaker.name
               .absolute.theme__needle
