--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,9 +1,12 @@
-.hero.min-h-screen
-  .hero-content.text-center
-    .max-w-lg
-      h2.text-5xl.font-bold.mb-3.text-primary.tracking-wider
-        | ルーレットトーーク！
-      = link_to 'ルーレットを作る',
-        roulettes_path,
-        data: { "turbo-method": :post },
-        class: 'btn px-10 btn-primary tracking-widest mt-28'
+.min-h-screen.h-px.flex.flex-col
+  main.w-fit.mx-auto.h-5/6.grow.hero
+    .hero-content.text-center
+      .max-w-lg
+        h2.text-5xl.font-bold.mb-3.text-primary.tracking-wider
+          | ルーレットトーーク！
+        = link_to 'ルーレットを作る',
+          roulettes_path,
+          data: { "turbo-method": :post },
+          class: 'btn px-10 btn-primary tracking-widest mt-28'
+
+  = render partial: 'shared/footer'
