--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,5 +1,5 @@
-footer.footer.absolute.bottom-0
-  div[class="flex relative w-screen justify-center items-center\
+footer.footer.w-full.overflow-x-hidden
+  div[class="flex w-full relative justify-center items-center\
              p-3 bg-base-300 text-neutral"]
     .flex
       = button_tag '利用規約',
