--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -9,7 +9,7 @@ h2.font-bold.text-lg.mb-2
             .flex.items-center.h-full
               p.hidden
                 = talk_theme.id
-              .flex-1.line-clamp-1
+              .flex-1.text-wrap
                 = link_to talk_theme.theme,
                   edit_roulette_talk_theme_path(@roulette, talk_theme),
                   class: 'w-full block'
