ルーレット結果の背景色を透過させた

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -2,8 +2,8 @@
   .flex
     .relative
       div[
-        class="absolute left-6 z-10 rounded-xl shadow-lg bg-primary-content\
-               p-6 w-11/12 invisible"
+        class="absolute left-6 z-10 rounded-xl shadow-lg\
+               bg-primary-content/[.85] p-6 w-11/12 invisible"
         data-rotate-target="resultText"]
         .text-2xl.text-left.w-fit.mx-auto.tracking-wider
           .flex
