--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -19,7 +19,11 @@ h2.font-bold.text-lg.mb-2
                   data: { turbo_method: :delete, turbo_frame: '_top' },
                   class: 'btn btn-xs btn-circle btn-ghost'
   = turbo_frame_tag 'new_talk_theme' do
-    .mt-3.px-1
-      = link_to '＋ トークテーマを追加する',
-        new_roulette_talk_theme_path(@roulette),
-        class: 'text-neutral'
+    .mt-3.px-1 data-testid="new-talk-theme-link"
+      - if talk_themes.count < 10
+        = link_to '＋ トークテーマを追加する',
+          new_roulette_talk_theme_path(@roulette),
+          class: 'text-neutral'
+      - else
+        p.text-neutral
+          | トークテーマは10個以上追加できません
