--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -1,4 +1,4 @@
-.my-6 data-controller="rotate"
+.mt-6.mb-10.w-fit.mx-auto data-controller="rotate"
   .flex
     .relative
       div[
@@ -37,7 +37,7 @@
                       data-roulette-label-radius-value="170"
                       data-roulette-label-top-plus-value="10"
                       data-roulette-label-left-plus-value="100"]
-                      .w-24.whitespace-normal.ml-auto.line-clamp-2
+                      .w-24.whitespace-normal.ml-auto.line-clamp-2.text-left
                         = talk_theme.theme
               .absolute.roulette__speaker[
                 data-rotate-target="speaker"
@@ -55,7 +55,7 @@
                       data-roulette-label-radius-value="70"
                       data-roulette-label-top-plus-value="10"
                       data-roulette-label-left-plus-value="50"]
-                      .w-20.whitespace-normal.ml-auto.line-clamp-2
+                      .w-20.whitespace-normal.ml-auto.line-clamp-2.text-left
                         = speaker.name
               .absolute.theme__needle
               .absolute.speaker__needle
