--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,5 +1,5 @@
-header
-  .flex.w-full.items-center.py-2.pl-10.shadow.overflow-x-hidden
+header class="min-w-[1096px] shadow"
+  .flex.max-w-screen-2xl.mx-auto.items-center.py-2.pl-10
     = link_to image_tag('logo-header.png', size: '200x40'),
       root_path,
       class: 'text-primary font-bold text-2xl'
