--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -6,8 +6,8 @@
         | トークテーマと話す人を決めるルーレットを作成できます。
       p
         | ルーレットは自動的に保存されるので事前にトークテーマを考えておくことができます。
-    = image_tag 'roulette-image', class: 'w-full mt-10'
+    = image_tag 'roulette-image', class: 'w-full mt-10 shadow-md rounded-lg'
     = link_to 'ルーレットを作る',
       roulettes_path,
       data: { "turbo-method": :post },
-      class: 'btn px-10 btn-primary w-3/5 tracking-widest m-16 h-20 text-xl'
+      class: 'btn px-10 btn-primary w-1/2 tracking-widest m-16 h-20 text-xl'
