各ページにtitleとdescriptionを設定

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -1,3 +1,5 @@
+- set_meta_tags title: 'トークテーマルーレット',
+  description: 'トークテーマと話す人を登録してルーレットをスタートしましょう。'
 .mt-6.mb-10.w-fit.mx-auto data-controller="rotate"
   .flex
     .relative
