--- a/app/views/shared/_privacy_policy_modal.html.slim
+++ b/app/views/shared/_privacy_policy_modal.html.slim
@@ -6,7 +6,7 @@ dialog#privacy_policy_modal.modal
       form method="dialog"
         = button_tag '',
           class: 'btn btn-sm btn-circle btn-ghost absolute right-8 top-4'
-          = image_tag 'delete-icon.png', size: '15x15'
+          = image_tag 'delete-icon.png', size: '15x15', alt: 'モーダルを閉じる'
       .leading-7.text-base
         h2.font-bold.text-xl
           | プライバシーポリシー
