--- a/app/views/talk_themes/_index.html.slim
+++ b/app/views/talk_themes/_index.html.slim
@@ -14,7 +14,9 @@ h2.font-bold.text-lg.mb-2
                   edit_roulette_talk_theme_path(@roulette, talk_theme),
                   class: 'w-full block'
               .ml-2.opacity-0.group-hover:opacity-80
-                = link_to image_tag('delete-icon.png', size: '10x10'),
+                = link_to image_tag('delete-icon.png',
+                  size: '10x10',
+                  alt: 'トークテーマを削除'),
                   roulette_talk_theme_path(@roulette, talk_theme),
                   data: { turbo_method: :delete, turbo_frame: '_top' },
                   class: 'btn btn-xs btn-circle btn-ghost'
