--- a/app/views/speakers/_index.html.slim
+++ b/app/views/speakers/_index.html.slim
@@ -4,7 +4,8 @@ h2.font-bold.text-lg.mb-2
   .rounded.border.border-gray-400.w-80.overflow-hidden
     ul.w-full.max-h-60.overflow-y-auto
       - speakers.each do |speaker|
-        li.border-b.last:border-b-0.border-gray-400.w-full.group.pl-4.pr-2.py-2
+        li class="border-b last:border-b-0 border-gray-400 w-full group\
+                  pl-4 pr-2 py-2 hover:bg-base-200"
           = turbo_frame_tag speaker do
             .flex.items-center.h-full
               p.hidden
