トークテーマまたは話す人が0件の時の表示を追加

--- a/app/views/roulettes/show.html.slim
+++ b/app/views/roulettes/show.html.slim
@@ -1,77 +1,45 @@
 - set_meta_tags title: 'トークテーマルーレット',
   description: 'トークテーマと話す人を登録してルーレットをスタートしましょう。'
-.mt-6.mb-10.w-fit.mx-auto data-controller="rotate"
+.mt-6.mb-10.w-fit.mx-auto
   .flex
-    .relative
-      div[
-        class="absolute left-6 z-10 rounded-xl shadow-lg\
-               bg-primary-content/[.85] p-6 w-11/12 invisible"
-        data-rotate-target="resultText"]
-        .text-2xl.text-left.w-fit.mx-auto.tracking-wider
+    - if @talk_themes.count.zero? || @speakers.count.zero?
+      div class="min-w-[600px] flex items-center"
+        .alert.alert-error.mx-auto.shadow.w-4/5
           .flex
+            = image_tag 'error.svg', size: '20x20', class: 'mr-3'
             p
-              | トークテーマは
-              span.text-accent.font-bold.ml-3[
-                data-rotate-target="talkThemeResult"]
-          .flex
-            p
-              | 話すのは
-              span.text-accent.font-bold.mx-3 data-rotate-target="speakerResult"
-              span
-                | さんです。
-      .mt-32 data-controller="roulette"
-        .flex
-          div class="flex-initial w-[600px] h-[600px]"
-            div class="text-center relative w-[600px]"
-              .roulette__theme[
-                data-rotate-target="talk"
-                style="#{Roulette.conic_gradient_text(
-                  @talk_themes, TalkTheme::COLOR_SET
-                )}"]
-                ul.absolute.theme__labelContainer
-                  - @talk_themes.each_with_index do |talk_theme, idx|
-                    li.absolute.theme__label[
-                      data-roulette-target="talkTheme"
-                      data-rotate-target="talkTheme"
-                      data-controller="roulette-label"
-                      data-roulette-label-index-value="#{idx}"
-                      data-roulette-label-count-value="#{@talk_themes.count}"
-                      data-roulette-label-radius-value="170"
-                      data-roulette-label-top-plus-value="10"
-                      data-roulette-label-left-plus-value="100"]
-                      .w-24.whitespace-normal.ml-auto.line-clamp-2.text-left
-                        = talk_theme.theme
-              .absolute.roulette__speaker[
-                data-rotate-target="speaker"
-                style="#{Roulette.conic_gradient_text(
-                  @speakers, Speaker::COLOR_SET
-                )}"]
-                ul.absolute.speaker__labelContainer
-                  - @speakers.each_with_index do |speaker, idx|
-                    li.absolute.speaker__label[
-                      data-roulette-target="speakerName"
-                      data-rotate-target="speakerName"
-                      data-controller="roulette-label"
-                      data-roulette-label-index-value="#{idx}"
-                      data-roulette-label-count-value="#{@speakers.count}"
-                      data-roulette-label-radius-value="70"
-                      data-roulette-label-top-plus-value="10"
-                      data-roulette-label-left-plus-value="50"]
-                      .w-20.whitespace-normal.ml-auto.line-clamp-2.text-left
-                        = speaker.name
-              .absolute.theme__needle
-              .absolute.speaker__needle
-        .flex.justify-center.mt-8
-          .flex.justify-center.w-5/6.ml-auto
-            button[
-              class="btn btn-lg btn-primary mb-0.5 mr-4 px-10 tracking-wider"
-              data-rotate-target="startButton"
-              data-action="click->rotate#start"]
-              | スタート
-            button.btn.bg-neutral-content.mt-auto.tracking-wider.px-6[
-              data-rotate-target="resetButton"
-              data-action="click->roulette#reset"]
-              | リセット
+              | トークテーマと話す人を1件以上登録してください。
+    - else
+      .relative data-controller="rotate"
+        div[
+          class="absolute left-6 z-10 rounded-xl shadow-lg\
+                 bg-primary-content/[.85] p-6 w-11/12 invisible"
+          data-rotate-target="resultText"]
+          .text-2xl.text-left.w-fit.mx-auto.tracking-wider
+            .flex
+              p
+                | トークテーマは
+                span.text-accent.font-bold.ml-3[
+                  data-rotate-target="talkThemeResult"]
+            .flex
+              p
+                | 話すのは
+                span.text-accent.font-bold.mx-3 data-rotate-target="speakerResult"
+                span
+                  | さんです。
+        .mt-32 data-controller="roulette"
+          = render partial: 'roulettes/roulette', locals: { talk_themes: @talk_themes, speakers: @speakers}
+          .flex.justify-center.mt-8
+            .flex.justify-center.w-5/6.ml-auto
+              button[
+                class="btn btn-lg btn-primary mb-0.5 mr-4 px-10 tracking-wider"
+                data-rotate-target="startButton"
+                data-action="click->rotate#start"]
+                | スタート
+              button.btn.bg-neutral-content.mt-auto.tracking-wider.px-6[
+                data-rotate-target="resetButton"
+                data-action="click->roulette#reset"]
+                | リセット
     .ml-44
       .flex.justify-end
         div data-controller="clipboard"
