--- a/app/views/talk_themes/new.html.slim
+++ b/app/views/talk_themes/new.html.slim
@@ -3,5 +3,7 @@
     = form_with model: [@roulette, @talk_theme],
       html: { data: { turbo_frame: '_top' } },
       class: 'w-full flex' do |f|
-      = f.text_field :theme, class: 'input input-bordered input-sm w-4/5'
+      = f.text_field :theme,
+        class: 'input input-bordered input-sm w-4/5',
+        placeholder: '最近買ってよかったもの'
       = f.submit '登録', class: 'btn btn-outline btn-sm btn-primary ml-auto'
