--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,4 +1,4 @@
-footer class="footer min-w-[1096px] bg-base-300"
+footer class="footer min-w-80 bg-base-300 mt-auto"
   div[class="max-w-screen-2xl mx-auto justify-center items-center\
              pb-5 pt-6 text-neutral"]
     .flex
