--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html
       "data-turbo-track": 'reload',
       defer: true
 
-  body
+  body.min-h-screen.flex.flex-col
     - unless current_page?(root_path)
       = render partial: 'shared/header'
     main.w-full
