--- a/app/views/speakers/_index.html.slim
+++ b/app/views/speakers/_index.html.slim
@@ -2,7 +2,7 @@ h2.font-bold.text-lg.mb-2
   | 話す人
 = turbo_frame_tag 'speakers_list'
   - unless speakers.count.zero?
-    .rounded.border.border-gray-400.w-80.overflow-hidden
+    .rounded.border.border-gray-400.overflow-hidden
       ul.w-full.max-h-60.overflow-y-auto
         - speakers.each do |speaker|
           li class="border-b last:border-b-0 border-gray-400 w-full group\
