ルーレットの円をレスポンシブ対応した

--- a/app/views/roulettes/_roulette_and_buttons.html.slim
+++ b/app/views/roulettes/_roulette_and_buttons.html.slim
@@ -19,8 +19,8 @@
       .mt-32 data-controller="roulette"
   .mt-32 data-controller="roulette"
     .flex
-      div class="flex-initial w-[600px] h-[600px]"
-        div class="text-center relative w-[600px]"
+      div class="flex-initial w-[350px] md:w-[500px] lg:w-[600px] h-[350px] md:h-[500px] lg:h-[600px]"
+        div class="text-center relative w-[350px] md:w-[500px] lg:w-[600px]"
           .roulette__theme[
             data-rotate-target="talk"
             style="#{Roulette.conic_gradient_text(
