--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,5 +1,5 @@
 header class="min-w-80 shadow"
-  .flex.max-w-screen-2xl.items-center.py-2.pl-5.md:pl-10
+  .flex.max-w-screen-2xl.mx-auto.items-center.py-2.pl-3.md:pl-0
     = link_to image_tag('logo-header.png', size: '200x40', alt: 'RouletteTalk'),
       root_path,
       class: 'text-primary font-bold text-2xl'
