--- a/app/views/roulettes/_roulette_and_buttons.html.slim
+++ b/app/views/roulettes/_roulette_and_buttons.html.slim
@@ -1,9 +1,9 @@
-.relative data-controller="rotate"
+.relative.pt-24.md:pt-32 data-controller="rotate"
   div[
-    class="absolute left-6 z-10 rounded-xl shadow-lg\
-           bg-primary-content/[.85] p-6 w-11/12 invisible"
+    class="absolute top-0 left-4 lg:left-6 z-10 rounded-xl shadow-lg\
+           bg-primary-content/[.85] p-3 md:p-6 w-11/12 invisible"
     data-rotate-target="resultText"]
-    .text-2xl.text-left.w-fit.mx-auto.tracking-wider
+    .text-xl.md:text-2xl.text-left.w-fit.mx-auto.tracking-wider
       .flex
         p
           | トークテーマは
@@ -16,8 +16,7 @@
             data-rotate-target="speakerResult"]
           span
             | さんです。
-      .mt-32 data-controller="roulette"
-  .mt-32 data-controller="roulette"
+  div data-controller="roulette"
     .flex
       div class="flex-initial w-[350px] md:w-[500px] lg:w-[600px] h-[350px] md:h-[500px] lg:h-[600px]"
         div class="text-center relative w-[350px] md:w-[500px] lg:w-[600px]"
