linterの指摘事項修正

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -13,4 +13,5 @@
   = link_to 'ルーレットを作る',
     roulettes_path,
     data: { "turbo-method": :post },
-    class: 'btn btn-primary w-4/5 md:w-1/2 px-10 tracking-widest my-16 mx-auto h-20 text-lg md:text-xl'
+    class: 'btn btn-primary w-4/5 md:w-1/2 px-10 tracking-widest\
+            my-16 mx-auto h-20 text-lg md:text-xl'
